force-app/main/default/objects/Opportunity_JU__c/Opportunity_JU__c.object-meta.xml
<CustomObject>
    <label>住環境商談</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>住環境商談名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>