force-app/main/default/objects/Opportunity_JU__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>住環境商談</relationshipLabel>
    <relationshipName>Opportunity_Account</relationshipName>
    <type>Lookup</type>
</CustomField>