force-app/main/default/objects/Opportunity_JU__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>住環境商談</relationshipLabel>
    <relationshipName>Opporttunity_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>