force-app/main/default/objects/Opportunity_JU__c/fields/DepartmentNum__c.field-meta.xml
<CustomField>
    <fullName>DepartmentNum__c</fullName>
    <formula>OppName__r.JU_reort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>担当部署（№）</label>
    <type>Text</type>
</CustomField>