force-app/main/default/objects/Opportunity_JU__c/fields/JU_Amount__c.field-meta.xml
<CustomField>
    <fullName>JU_Amount__c</fullName>
    <label>見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>