force-app/main/default/objects/Opportunity_JU__c/fields/JU_CloseDate__c.field-meta.xml
<CustomField>
    <fullName>JU_CloseDate__c</fullName>
    <label>完了予定日</label>
    <type>Date</type>
</CustomField>