force-app/main/default/objects/Opportunity_JU__c/fields/JU_Department__c.field-meta.xml
<CustomField>
    <fullName>JU_Department__c</fullName>
    <formula>OppName__r.JU_reort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>担当部署JU</label>
    <type>Text</type>
</CustomField>