force-app/main/default/objects/Opportunity_JU__c/fields/JU_OppAmount__c.field-meta.xml
<CustomField>
    <fullName>JU_OppAmount__c</fullName>
    <label>商談金額_JU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>