force-app/main/default/objects/Opportunity_JU__c/fields/JU_PlanEmploymentAmount__c.field-meta.xml
<CustomField>
    <fullName>JU_PlanEmploymentAmount__c</fullName>
    <label>KGI計画額_JU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>