force-app/main/default/objects/Opportunity_JU__c/fields/ju_shyoudan_saiyoukingaku__c.field-meta.xml
<CustomField>
    <fullName>ju_shyoudan_saiyoukingaku__c</fullName>
    <label>採用金額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>