force-app/main/default/objects/Opportunity_JU__c/fields/JU_StageName__c.field-meta.xml
<CustomField>
    <fullName>JU_StageName__c</fullName>
    <label>フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>停滞保留中</fullName>
                <color>#AFCADF</color>
                <label>停滞保留中</label>
            </value>
            <value>
                <fullName>訪問1回目</fullName>
                <color>#2F5D85</color>
                <label>訪問1回目</label>
            </value>
            <value>
                <fullName>初回見積提出</fullName>
                <color>#0B6FCE</color>
                <label>初回見積提出</label>
            </value>
            <value>
                <fullName>購買決定者検討中</fullName>
                <color>#57F17C</color>
                <label>購買決定者検討中</label>
            </value>
            <value>
                <fullName>トライアル</fullName>
                <color>#78C953</color>
                <label>トライアル</label>
            </value>
            <value>
                <fullName>採用一歩手前</fullName>
                <color>#419249</color>
                <label>採用一歩手前</label>
            </value>
            <value>
                <fullName>採用（受注）</fullName>
                <color>#F96FB7</color>
                <label>採用（受注）</label>
            </value>
            <value>
                <fullName>計画</fullName>
                <color>#641CCF</color>
                <label>計画</label>
            </value>
            <value>
                <fullName>得意先検討中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>