force-app/main/default/objects/Opportunity_JU__c/fields/JU_teitaimeisai__c.field-meta.xml
<CustomField>
    <fullName>JU_teitaimeisai__c</fullName>
    <label>状況明細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>