force-app/main/default/objects/Opportunity_JU__c/fields/KGI_7_5__c.field-meta.xml
<CustomField>
    <fullName>KGI_7_5__c</fullName>
    <label>KGI×7.5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>