force-app/main/default/objects/Opportunity_JU__c/fields/OppName__c.field-meta.xml
<CustomField>
    <fullName>OppName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>住環境商談</relationshipLabel>
    <relationshipName>Opp_Opportunity_JU</relationshipName>
    <type>Lookup</type>
</CustomField>