force-app/main/default/objects/Opportunity_JU__c/fields/OppOwnerId__c.field-meta.xml
<CustomField>
    <fullName>OppOwnerId__c</fullName>
    <formula>OppName__r.Owner.LastName  &amp;  OppName__r.Owner.FirstName</formula>
    <label>商談所有者</label>
    <type>Text</type>
</CustomField>