force-app/main/default/objects/Opportunity_JU__c/fields/parentAccount__c.field-meta.xml
<CustomField>
    <fullName>parentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>親取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>住環境商談 (親取引先)</relationshipLabel>
    <relationshipName>parentAccountOpportunity_JU</relationshipName>
    <type>Lookup</type>
</CustomField>