force-app/main/default/objects/Opportunity_JU__c/fields/recruitment_decision__c.field-meta.xml
<CustomField>
    <fullName>recruitment_decision__c</fullName>
    <label>採用判定</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>