force-app/main/default/objects/Opportunity_JU__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JU_Executiondate__c</columns>
    <columns>AccountId__c</columns>
    <columns>OppName__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>